modificando tags header

--- a/01-fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/04-combinacoes-e-classes-descendentes/style.css
+++ b/01-fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/04-combinacoes-e-classes-descendentes/style.css
@@ -7,3 +7,10 @@ ol li:nth-last-of-type(even) {
 ol li:nth-last-of-type(odd) {
     text-transform: uppercase;
 }
+h3, h2, h1 {
+    color: red;
+}
+h1.italic {
+    font-size: 40px;
+    border: 1px solid black
+}
