--- a/01-fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/04-combinacoes-e-classes-descendentes/style.css
+++ b/01-fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/04-combinacoes-e-classes-descendentes/style.css
@@ -14,3 +14,9 @@ h1.italic {
     font-size: 40px;
     border: 1px solid black
 }
+li {
+    font-size: 20px;
+}
+li em {
+    font-weight: bold;
+}
