--- a/01-fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/04-combinacoes-e-classes-descendentes/style.css
+++ b/01-fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/04-combinacoes-e-classes-descendentes/style.css
@@ -20,3 +20,9 @@ li {
 li em {
     font-weight: bold;
 }
+#linguagens li:nth-child(-n+3) {
+    color: blue;
+}
+.java {
+    background-color: pink;
+}
