--- a/01-fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/04-combinacoes-e-classes-descendentes/style.css
+++ b/01-fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/04-combinacoes-e-classes-descendentes/style.css
@@ -26,3 +26,23 @@ li em {
 .java {
     background-color: pink;
 }
+#stck-of:hover {
+    font-weight: bold;
+    color: orange;
+}
+#w3s:hover {
+    font-weight: bold;
+    color: green;
+}
+#mdn:hover {
+    font-weight: bold;
+    color: black
+}
+#devdocs:hover {
+    font-weight: bold;
+    color: yellow;
+}
+#trybe:hover {
+    font-weight: bold;
+    color: green;
+}
