--- a/01-fundamentos/secao-04-dom-eventos-e-web-storage/dia-04-web-storage/style.css
+++ b/01-fundamentos/secao-04-dom-eventos-e-web-storage/dia-04-web-storage/style.css
@@ -1,6 +1,19 @@
-.button {
-  width: 7%;
+#event-lists {
+  text-align: center;
+  border: 2px solid green;
 }
-#font-family-list .button {
-  width: 13%;
+.button {
+  width: 100%;
+}
+.list {
+  display: inline-block;
+  padding-left: 5%;
+  padding-right: 5%;
+  vertical-align: top;
+  list-style: none;
+}
+.list p {
+  text-align: center;
+  margin-bottom: 0;
+  font-weight: bold;
 }
