--- a/02-fe/01-intro-e-js-assincrono/dia-02/src/style.css
+++ b/02-fe/01-intro-e-js-assincrono/dia-02/src/style.css
@@ -1,7 +1,17 @@
 * {
   text-align: center;
+  background-color: #adadad;
 }
 
-#super-hero-card {
-  height: 60vh;
+#img-div {
+  height: 480px;
+}
+
+#draft-btn {
+  font-size: 18px;
+  padding: 10px 30px;
+  background-color: green;
+  border: 0;
+  cursor: pointer;
+  color: white;
 }
