--- a/02-fe/01-intro-e-js-assincrono/dia-02/selectpet/src/style.css
+++ b/02-fe/01-intro-e-js-assincrono/dia-02/selectpet/src/style.css
@@ -37,10 +37,14 @@ main {
 }
 
 #img-div {
-  box-shadow: 10px 5px 5px black;
+  box-shadow: 2px 2px 5px 2px black;
   padding: 10px;
   border: 1px solid black;
   border-radius: 6px;
   width: 50vw;
   text-align: center;
+}
+
+#pet-img {
+  max-width: 100%;
 }
